--- a/lib/views/layouts/index.hbs
+++ b/lib/views/layouts/index.hbs
@@ -9,12 +9,8 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <div class="container-fluid bg-light h-100 pt-5">
-        <div class="row justify-content-center">
-            <div class="col-4">
-                {{{body}}}
-            </div>
-        </div>
+    <div class="container-fluid bg-light h-100">
+        {{{body}}}
     </div>
     <script src="/bootstrap/js/bootstrap.min.js"></script>
 </body>
