Build authentication templates

--- a/lib/views/pages/signup.hbs
+++ b/lib/views/pages/signup.hbs
@@ -1,23 +1,29 @@
 
 <!-- Registration .hbs page -->
 
-<form class="col-sm-8 col-md-5 p-3 col-lg-3 border" >
-    <div class="display-6 my-3 text-center">.cubanengineer</div>
+<form action="" method="POST" class="col-sm-8 col-md-5 p-3 col-lg-3 border rounded" >
+    <div class="display-6 my-3 text-center">*.alldone</div>
+    <div class="mb-2">
+        <label for="alldone_user_fullname" class="form-label">Full name</label>
+        <input type="text" class="form-control" name="fullname" id="alldone_user_fullname" required>
+    </div>
     <div class="mb-2">
         <label for="alldone_user_username" class="form-label">Username</label>
-        <input type="text" class="form-control" id="alldone_user_username" required>
+        <input type="text" class="form-control" name="username" id="alldone_user_username" required>
+    </div>
+    <div class="mb-2">
+        <label for="alldone_user_email" class="form-label">Email</label>
+        <input type="email" class="form-control" name="email" id="alldone_user_email" required>
     </div>
     <div class="mb-2">
         <label for="alldone_user_password" class="form-label">Password</label>
-        <input type="password" class="form-control" id="alldone_user_password" required>
+        <input type="password" class="form-control" name="password" id="alldone_user_password" required>
     </div>
     <div class="d-grid my-3">
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary">Register</button>
     </div>
-    <div class="text-muted text-center">
-        Don't have an account yet? go ahead 
-        <a href="/signup">here</a>
+    <div class="text-muted text-center">        
+        Have you an account already? go ahead
+        <a href="/signin">here</a>
     </div>
 </form>
-
-
