--- a/lib/views/pages/signup.hbs
+++ b/lib/views/pages/signup.hbs
@@ -1,7 +1,7 @@
 
 <!-- Registration .hbs page -->
 
-<form action="" method="POST" class="col-sm-8 col-md-5 p-3 col-lg-3 border rounded" >
+<form action="/auth/signup" method="POST" class="col-sm-8 col-md-5 p-3 col-lg-3 border rounded" >
     <div class="display-6 my-3 text-center">*.alldone</div>
     <div class="mb-2">
         <label for="alldone_user_fullname" class="form-label">Full name</label>
